typecheck, lint
